# omnimapper

./: .gitignore  CMakeLists.txt  INSTALLATION  LICENSE  README.md
cmake/: blender_user_addon_path.py  write_timestamped_omnimappercpp.py
py/: __init__.py
src/: omnimapper.cpp
